@@ -1,7 +1,11 @@
-import jdk.incubator.foreign.*;
+
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.*;
 
-import static jdk.incubator.foreign.SegmentAllocator.implicitAllocator;
+import static java.lang.foreign.ValueLayout.ADDRESS;
 
 
 public class Speech {
@@ -12,9 +16,9 @@ public class Speech {
         var nativeSymbol = symbolLookup.lookup("say_something").get();
 
         MethodHandle f;
-        f = CLinker.systemCLinker()
-                .downcallHandle(nativeSymbol, FunctionDescriptor.ofVoid(ValueLayout.OfAddress.ADDRESS));
-       try (ResourceScope scope= ResourceScope.newConfinedScope()) {
+        f = Linker.nativeLinker()
+                .downcallHandle(nativeSymbol, FunctionDescriptor.ofVoid(ADDRESS));
+       try (var memorySession= MemorySession.openConfined()) {
            String say = null;
            if (args == null || args.length == 0) {
                say = "Hello there";
@@ -26,8 +30,8 @@ public class Speech {
                }
            }
            System.out.println("Saying: " + say);
-           Addressable cString = implicitAllocator().allocateUtf8String(say.concat("\n"));
-           f.invokeExact(cString);
+           var cString = memorySession.allocateUtf8String(say.concat("\n"));
+           f.invoke(cString);
        } catch (Throwable throwable) {
            throwable.printStackTrace();
        }
