@@ -1,6 +1,10 @@
-import jdk.incubator.foreign.*;
-
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
+
+import static java.lang.foreign.ValueLayout.JAVA_BOOLEAN;
 
 
 //import static touchid.touchid_h.c_authenticate_user;
@@ -8,13 +12,13 @@ import java.lang.invoke.MethodHandle;
 public class TouchID {
     public static void main(String[] args) {
        System.loadLibrary("touchidswift");
-       try (ResourceScope scope= ResourceScope.newConfinedScope()) {
+       try (MemorySession memorySession= MemorySession.openConfined()) {
            var  symbolLookup = SymbolLookup.loaderLookup();
            var nativeSymbol = symbolLookup.lookup("authenticate_user").get();
            System.out.println("Identify Yourself!");
            MethodHandle f;
-           f = CLinker.systemCLinker()
-                   .downcallHandle(nativeSymbol, FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
+           f = Linker.nativeLinker()
+                   .downcallHandle(nativeSymbol, FunctionDescriptor.of(JAVA_BOOLEAN));
 
            Boolean pass = (boolean) f.invokeExact();
            if (pass) {
@@ -22,8 +26,6 @@ public class TouchID {
            } else {
                System.out.println("Access Denied ");
            }
-
-
        } catch (Throwable throwable) {
            throwable.printStackTrace();
        }
