@@ -1,21 +1,15 @@
-import jdk.incubator.foreign.*;
 
-import java.lang.invoke.VarHandle;
+import java.lang.foreign.*;
 import java.util.Random;
 
-import static jdk.incubator.foreign.CLinker.*;
-import static jdk.incubator.foreign.ResourceScope.newConfinedScope;
-import static org.unix.stdio_h.C_INT;
-
+import static java.lang.foreign.ValueLayout.JAVA_INT;
 
 /**
  * Panama Structs Array
  */
 public class StructsArray {
     public static void main(String[] args) {
-      try (var scope = newConfinedScope()) {
-        var allocator = SegmentAllocator.implicitAllocator();
-
+      try (var memorySession = MemorySession.openConfined()) {
         /*
             struct Point {
                int x;
@@ -23,13 +17,13 @@ public class StructsArray {
             };
         */
         GroupLayout pointStruct = MemoryLayout.structLayout(
-                C_INT.withName("x"),
-                C_INT.withName("y")
+                JAVA_INT.withName("x"),
+                JAVA_INT.withName("y")
         );
 
         System.out.println("\nCreate A Sequence of Point structs:");
         SequenceLayout seqStruct = MemoryLayout.sequenceLayout(5, pointStruct);
-        MemorySegment points = allocator.allocate(seqStruct);
+        MemorySegment points = memorySession.allocate(seqStruct);
 
         var VHSeq_x = seqStruct.varHandle(
                 MemoryLayout.PathElement.sequenceElement(),
@@ -40,14 +34,13 @@ public class StructsArray {
 
 
         Random random = new Random();
-        for(long i=0; i<seqStruct.elementCount().getAsLong(); i++) {
+        for(long i=0; i<seqStruct.elementCount(); i++) {
           VHSeq_x.set(points, i, random.nextInt(100));
           VHSeq_y.set(points, i, random.nextInt(100));
         }
-        for(long i=0; i<seqStruct.elementCount().getAsLong(); i++) {
+        for(long i=0; i<seqStruct.elementCount(); i++) {
           System.out.printf(" points[%d] = (%2d, %3d) \n", i, VHSeq_x.get(points, i), VHSeq_y.get(points, i));
         }
       }
     }
 }
-
